[package]
name = "rustadvance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oracle = "0.6.2"
dotenv = "0.15.0"
serde = { version = "1.0.204", features = ["derive"] }
validator = {version = "0.18.1", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0.86"
actix-cors = "0.7.0"
actix-web = {version = "4.8.0", features = ["rustls"]}
rustls = "0.20.0"
rustls-pemfile= "1.0.4"
